# rust_maze_generator

./: .gitignore  Cargo.toml
docs/: index.html
src/: main.rs  maze.rs  ui.rs
